1_Code/3_STM32/0_workspace/.metadata/.plugins/org.eclipse.cdt.ui/X1_Thorn_v3.build.log
18:39:29 **** Incremental Build of configuration Debug for project X1_Thorn_v3 ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m7 -std=gnu11 -g3 -DDEBUG -DUSE_PWR_LDO_SUPPLY -DUSE_HAL_DRIVER -DSTM32H743xx -c -I../Core/Inc -I../Drivers/STM32H7xx_HAL_Driver/Inc -I../Drivers/STM32H7xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32H7xx/Include -I../Drivers/CMSIS/Include -I"C:/Users/marcv/Desktop/X1-Thorn/1_Code/3_STM32/0_workspace/X1_Thorn_v3/Core/Src/User/Lib/AcadosAPI" -I"C:/Users/marcv/Desktop/X1-Thorn/1_Code/3_STM32/0_workspace/X1_Thorn_v3/Core/Src/User/Lib/AcadosAPI/include" -I"C:/Users/marcv/Desktop/X1-Thorn/1_Code/3_STM32/0_workspace/X1_Thorn_v3/Core/Src/User/Lib/AcadosAPI/include/acados" -I"C:/Users/marcv/Desktop/X1-Thorn/1_Code/3_STM32/0_workspace/X1_Thorn_v3/Core/Src/User/Lib/AcadosAPI/include/acados_c" -I"C:/Users/marcv/Desktop/X1-Thorn/1_Code/3_STM32/0_workspace/X1_Thorn_v3/Core/Src/User/Lib/AcadosAPI/include/blasfeo/include" -I"C:/Users/marcv/Desktop/X1-Thorn/1_Code/3_STM32/0_workspace/X1_Thorn_v3/Core/Src/User/Lib/AcadosAPI/include/hpipm/include" -I../Middlewares/Third_Party/FreeRTOS/Source/include -I../Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS_V2 -I../Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM4F -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv5-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'HAL_TIM_PeriodElapsedCallback':
../Core/Src/main.c:212:21: error: 'ESCTaskSemaphoreHandle' undeclared (first use in this function); did you mean 'xSemaphoreHandle'?
  212 |                 if (ESCTaskSemaphoreHandle != NULL)
      |                     ^~~~~~~~~~~~~~~~~~~~~~
      |                     xSemaphoreHandle
../Core/Src/main.c:212:21: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/main.c:214:25: warning: implicit declaration of function 'xSemaphoreGiveFromISR' [-Wimplicit-function-declaration]
  214 |                         xSemaphoreGiveFromISR(ESCTaskSemaphoreHandle, &xHigherPriorityTaskWoken_ESC);
      |                         ^~~~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:220:21: error: 'ControlTaskSemaphoreHandle' undeclared (first use in this function)
  220 |                 if (ControlTaskSemaphoreHandle != NULL)
      |                     ^~~~~~~~~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:223:47: error: 'TestsTaskSemaphoreHandle' undeclared (first use in this function)
  223 |                         xSemaphoreGiveFromISR(TestsTaskSemaphoreHandle, &xHigherPriorityTaskWoken_Tests);
      |                                               ^~~~~~~~~~~~~~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:64: Core/Src/main.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.

18:39:30 Build Failed. 4 errors, 1 warnings. (took 1s.66ms)

